src/test/ui/macros/issue-104769-concat_bytes-invalid-literal.stderr
error: invalid suffix `Y` for number literal
  --> $DIR/issue-104769-concat_bytes-invalid-literal.rs:4:19
   |
LL |     concat_bytes!(7Y);
   |                   ^^ invalid suffix `Y`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: integer literal is too large
  --> $DIR/issue-104769-concat_bytes-invalid-literal.rs:6:19
   |
LL |     concat_bytes!(888888888888888888888888888888888888888);
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: value exceeds limit of `340282366920938463463374607431768211455`

error: aborting due to 2 previous errors

